# Autonomous-Vehicle

./: README.md
catkin_ws_autonomous_vehicle/datasets/book_yolo/images/: 14.txt  15.txt  5.txt  9.txt
catkin_ws_autonomous_vehicle/datasets/book_yolo/labels/: 1.txt  10.txt  11.txt  12.txt  13.txt  16.txt  2.txt  3.txt  4.txt  6.txt  7.txt  8.txt
catkin_ws_autonomous_vehicle/datasets/test/: 2.txt
catkin_ws_autonomous_vehicle/devel/: .catkin  .rosinstall  local_setup.sh
catkin_ws_autonomous_vehicle/devel/include/art_racecar/: imuConfig.h
catkin_ws_autonomous_vehicle/devel/include/car_msgs/: DetectFinal.h  LidarDetect.h  YoloDetect.h  car_location.h
catkin_ws_autonomous_vehicle/devel/include/first_circle_pathplanning/: DetectFinal.h
catkin_ws_autonomous_vehicle/devel/include/ls01b_v2/: FilterConfig.h  resolutionRequest.h  resolutionResponse.h
catkin_ws_autonomous_vehicle/devel/include/second_circle_pathplanning/: SecondStart.h
catkin_ws_autonomous_vehicle/devel/lib/arc_utilities/: test_arc_utilities  test_hierarchical_clustering
catkin_ws_autonomous_vehicle/devel/lib/camera_init/: camera_init  get_train_images
catkin_ws_autonomous_vehicle/devel/lib/car_location/: car_location  car_track
catkin_ws_autonomous_vehicle/devel/lib/detect_lidar/: detect_lidar
catkin_ws_autonomous_vehicle/devel/lib/encoder_driver/: encoder_driver_node1
catkin_ws_autonomous_vehicle/devel/lib/first_circle_pathplanning/: first_pathplanning
catkin_ws_autonomous_vehicle/devel/lib/get_map/: get_map
catkin_ws_autonomous_vehicle/devel/lib/get_scan_new/: get_scan_new
catkin_ws_autonomous_vehicle/devel/lib/grad_traj_optimization/: rdp_example
catkin_ws_autonomous_vehicle/devel/lib/imu_complementary_filter/: complementary_filter_node
catkin_ws_autonomous_vehicle/src/backward-cpp/: backward.cpp
catkin_ws_autonomous_vehicle/src/camera_init/: CMakeLists.txt
catkin_ws_autonomous_vehicle/src/camera_init/launch/: camera.launch
catkin_ws_autonomous_vehicle/src/camera_init/src/: camera_init.cpp  get_train_images.cpp  get_train_images.py
catkin_ws_autonomous_vehicle/src/car_location/: CMakeLists.txt
catkin_ws_autonomous_vehicle/src/car_location/launch/: get_location.launch
catkin_ws_autonomous_vehicle/src/car_location/src/: car_location.cpp  car_track.cpp
catkin_ws_autonomous_vehicle/src/car_msgs/: CMakeLists.txt
catkin_ws_autonomous_vehicle/src/car_msgs/msg/: DetectFinal.msg  YoloDetect.msg
catkin_ws_autonomous_vehicle/src/car_test/: CMakeLists.txt  package.xml
catkin_ws_autonomous_vehicle/src/car_test/launch/: running_control.launch
catkin_ws_autonomous_vehicle/src/car_test/src/: car_track.cpp  go.cpp  point_test.cpp  pure_pursuit.cpp
catkin_ws_autonomous_vehicle/src/detect_composition/: CMakeLists.txt  package.xml
catkin_ws_autonomous_vehicle/src/detect_composition/config/: barrel_detect.yaml  camera.yaml
catkin_ws_autonomous_vehicle/src/detect_composition/launch/: detect_all_sensor.launch  detect_barrel.launch
catkin_ws_autonomous_vehicle/src/detect_composition/src/: ceres_solve_Homography.hpp  detect_barrel.cpp  detect_barrel.hpp  detect_node.cpp
catkin_ws_autonomous_vehicle/src/detect_lidar/: CMakeLists.txt
catkin_ws_autonomous_vehicle/src/detect_lidar/launch/: detect_lidar.launch
catkin_ws_autonomous_vehicle/src/detect_lidar/src/: Kmeans++.py  detect_lidar.cpp  detect_lidar（复件）.cpp
catkin_ws_autonomous_vehicle/src/encoder_driver/: CMakeLists.txt  package.xml
catkin_ws_autonomous_vehicle/src/first_circle_pathplanning/: CMakeLists.txt
catkin_ws_autonomous_vehicle/src/first_circle_pathplanning/config/: param.yaml
catkin_ws_autonomous_vehicle/src/first_circle_pathplanning/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws_autonomous_vehicle/src/first_circle_pathplanning/devel/.private/catkin_tools_prebuild/: .catkin
catkin_ws_autonomous_vehicle/src/first_circle_pathplanning/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
catkin_ws_autonomous_vehicle/src/first_circle_pathplanning/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
catkin_ws_autonomous_vehicle/src/first_circle_pathplanning/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
catkin_ws_autonomous_vehicle/src/first_circle_pathplanning/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
catkin_ws_autonomous_vehicle/src/first_circle_pathplanning/launch/: planning.launch  second.launch
catkin_ws_autonomous_vehicle/src/first_circle_pathplanning/msg/: DetectFinal.msg
catkin_ws_autonomous_vehicle/src/first_circle_pathplanning/src/: first_pathplanning.cpp
catkin_ws_autonomous_vehicle/src/first_circle_pathplanning/yaml/: 221205.yaml  221205_400.yaml  my_param.yaml
catkin_ws_autonomous_vehicle/src/get_map/: CMakeLists.txt
catkin_ws_autonomous_vehicle/src/get_map/launch/: get_map.launch
catkin_ws_autonomous_vehicle/src/get_map/rviz/: conf1.rviz
catkin_ws_autonomous_vehicle/src/get_map/scripts/: cluster.py
catkin_ws_autonomous_vehicle/src/get_map/src/: MapHandler.cpp  MapHandler.h  MapHandler（复件）.cpp  car_track.cpp  get_map.cpp
catkin_ws_autonomous_vehicle/src/get_scan_new/: CMakeLists.txt
catkin_ws_autonomous_vehicle/src/get_scan_new/src/: get_scan_new.cpp
catkin_ws_autonomous_vehicle/src/second_circle_pathplanning/: CMakeLists.txt
code/: 无人驾驶车初学程序包.rar
code/配套资料/: 1-3更新源  1-4安装ROS
code/配套资料/2-1-imu调试/: 2-1imu调试
code/配套资料/2-10远程vnc配置/: 2-10远程vnc配置
code/配套资料/2-2-雷达调试/: 2-2laser调试
code/配套资料/2-3编码器调试/: 2-3编码器调试
code/配套资料/2-4udev配置/: 2-4-1imu配置  2-4-2 laser配置  2-4-3 encoder配置  2-4-4 car配置
code/配套资料/2-5 配置tf坐标关系/: 坐标关系配置
code/配套资料/2-6 键盘控制/: 2-6-键盘控制配置
code/配套资料/2-7激光雷达里程计信息获取/: 2-7-激光雷达里程计信息获取
code/配套资料/2-8imu与编码器信息融合/: 2-8imu与编码器数据融合
code/配套资料/2-9rescuezilla系统备份方法/: 2-9系统备份及还原
code/配套资料/3-1 构建地图/: 3-1构建地图
code/配套资料/3-2自主导航/: 3-2自主导航
code/配套资料/3-3 路由器配置/: 3-3路由器配置
code/配套资料/3-6 多点导航/: 3-6 多点导航
(+225 files in other folders)
